--- a/notebookd7a85b3b71.ipynb
+++ b/notebookd7a85b3b71.ipynb
@@ -127,11 +127,11 @@
         "print('Data source import complete.')\n"
       ],
       "metadata": {
-        "id": "P8oLGrylT3kh",
-        "outputId": "375b789b-3c3a-42ac-83f8-d119931c67db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P8oLGrylT3kh",
+        "outputId": "375b789b-3c3a-42ac-83f8-d119931c67db"
       },
       "cell_type": "code",
       "outputs": [
@@ -173,11 +173,11 @@
         "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
         "trusted": true,
-        "id": "lQ-Iy4P9T3kk",
-        "outputId": "863395c6-0145-443f-b0c9-1b20031408b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lQ-Iy4P9T3kk",
+        "outputId": "863395c6-0145-443f-b0c9-1b20031408b1"
       },
       "execution_count": 3,
       "outputs": [
@@ -1175,7 +1175,7 @@
         "\n",
         "    def __getitem__(self, idx):\n",
         "        img_path = os.path.join(self.img_dir, self.img_names[idx])\n",
-        "        label_path = os.path.join(self.label_dir, self.img_names[idx].replace(\".png\", \"_L.png\"))  # adjust label path\n",
+        "        label_path = os.path.join(self.label_dir, self.img_names[idx].replace(\".png\", \"_L.png\"))\n",
         "\n",
         "        image = Image.open(img_path).convert('RGB')\n",
         "        label = Image.open(label_path).convert('L')  # convert label to grayscale (single channel)\n",
@@ -1189,31 +1189,15 @@
         "\n",
         "        return image, label\n",
         "\n",
-        "# Directories for images and labels (using raw strings)\n",
         "train_img_dir = r\"/kaggle/input/camvid/train\"\n",
         "train_label_dir = r\"/kaggle/input/camvid/train_labels\"\n",
         "val_img_dir = r\"/kaggle/input/camvid/val\"\n",
         "val_label_dir = r\"/kaggle/input/camvid/val_labels\"\n",
         "\n",
-        "# Print paths for debugging\n",
         "print(\"Train images directory:\", train_img_dir)\n",
         "print(\"Train labels directory:\", train_label_dir)\n",
         "print(\"Validation images directory:\", val_img_dir)\n",
-        "print(\"Validation labels directory:\", val_label_dir)\n",
-        "\n",
-        "# Define the preprocessing and postprocessing transforms\n",
-        "transform = T.Compose([\n",
-        "    T.Resize((256, 256)),\n",
-        "    T.ToTensor(),\n",
-        "    T.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-        "])\n",
-        "\n",
-        "# Create datasets and dataloaders\n",
-        "train_dataset = CamVidDataset(train_img_dir, train_label_dir, transform=transform)\n",
-        "val_dataset = CamVidDataset(val_img_dir, val_label_dir, transform=transform)\n",
-        "\n",
-        "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True)\n",
-        "val_loader = DataLoader(val_dataset, batch_size=4, shuffle=False)\n"
+        "print(\"Validation labels directory:\", val_label_dir)"
       ],
       "metadata": {
         "execution": {
@@ -1224,11 +1208,11 @@
           "shell.execute_reply": "2024-07-07T17:42:32.490546Z"
         },
         "trusted": true,
-        "id": "4B1ryXi2T3kl",
-        "outputId": "e570f5e6-bb5b-481d-cf92-adf2e72dd5f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4B1ryXi2T3kl",
+        "outputId": "e570f5e6-bb5b-481d-cf92-adf2e72dd5f5"
       },
       "execution_count": 5,
       "outputs": [
@@ -1247,10 +1231,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define the preprocessing and postprocessing transforms\n",
         "transform = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(mean=[0.5], std=[0.5])  # Adjust mean and std for single-channel grayscale images\n",
+        "    transforms.Normalize(mean=[0.5], std=[0.5])\n",
         "])"
       ],
       "metadata": {
@@ -1270,7 +1253,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create datasets and dataloaders\n",
         "train_dataset = CamVidDataset(train_img_dir, train_label_dir, transform=transform)\n",
         "val_dataset = CamVidDataset(val_img_dir, val_label_dir, transform=transform)\n",
         "\n",
@@ -1298,7 +1280,6 @@
         "model = models.segmentation.deeplabv3_resnet101(pretrained=True)\n",
         "model.classifier[4] = nn.Conv2d(256, 32, kernel_size=(1, 1), stride=(1, 1))  # CamVid has 32 classes\n",
         "\n",
-        "# Use GPU if available\n",
         "#device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "#model.to(device)"
       ],
@@ -1311,11 +1292,11 @@
           "shell.execute_reply": "2024-07-07T17:42:55.164616Z"
         },
         "trusted": true,
-        "id": "jltSk28_T3kn",
-        "outputId": "7093f8c5-928d-4844-a783-7e5812f95457",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jltSk28_T3kn",
+        "outputId": "7093f8c5-928d-4844-a783-7e5812f95457"
       },
       "execution_count": 8,
       "outputs": [
@@ -1340,7 +1321,6 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = opti.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "# Use GPU if available\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "model.to(device)"
       ],
@@ -1352,11 +1332,11 @@
           "shell.execute_reply": "2024-07-07T17:41:14.683418Z"
         },
         "trusted": true,
-        "id": "luI6wkHsT3kn",
-        "outputId": "f03bd852-3dc6-45a1-8566-fd5e45d59e29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "luI6wkHsT3kn",
+        "outputId": "f03bd852-3dc6-45a1-8566-fd5e45d59e29"
       },
       "execution_count": 13,
       "outputs": [
@@ -1752,14 +1732,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Training loop\n",
+        "#Training\n",
         "num_epochs = 10\n",
         "for epoch in range(num_epochs):\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
         "    for images, labels in train_loader:\n",
         "        images = images.to(device)\n",
-        "        labels = labels.to(device).squeeze(1)  # No need to modify labels further\n",
+        "        labels = labels.to(device).squeeze(1)\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        outputs = model(images)['out']\n",
@@ -1777,12 +1757,12 @@
         "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader):.4f}')\n"
       ],
       "metadata": {
-        "id": "vW-xqjPYT3ko",
-        "outputId": "f2e075d7-1fe3-4a0b-9c5f-e75131229412",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
-        }
+        },
+        "id": "vW-xqjPYT3ko",
+        "outputId": "f2e075d7-1fe3-4a0b-9c5f-e75131229412"
       },
       "execution_count": 14,
       "outputs": [
